--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ html, body, #root {
   background-image: url('/assets/FONDO_INICIO.png');
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size: cover;
 }
 
 /* que el canvas ocupe todo el contenedor */
