--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ button:focus-visible {
   position: absolute;
   top: 0px;
   align: center;
-  width: 500px;
+  width: 600px;
   height: auto;
 }
 
@@ -135,6 +135,7 @@ button:focus-visible {
   font-weight: 800;
   padding: .75rem 1.5rem;
   background: #e1aa4a;
+  margin-top: 100px;
   box-shadow: 0 0 5px #e1aa4a, 0 0 25px #e1aa4a, 0 0 50px #e1aa4a;
   color: #fff;
   border: none;
