--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,6 @@ button:focus-visible {
 .coin-overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.6);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -134,7 +133,7 @@ button:focus-visible {
   position: absolute;
   bottom: 50px;
   left: 50%;
-  width: 350px;
+  width: 400px;
   height: auto;
   /* centrado horizontal + animación */
   transform: translateX(-50%);
@@ -143,7 +142,7 @@ button:focus-visible {
 
 /* tu botón sigue igual */
 .start-button {
-  font-size: 1.5rem;
+  font-size: 3em;
   font-weight: 800;
   padding: .75rem 1.5rem;
   background: #ffcc00;
