--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ html, body, #root {
   position: relative;
   overflow: hidden;
 
-  background-image: url('/assets/RULETA_CUADRADO_BETPLAY_EB_FONDO.png');
+  background-image: url('/assets/quinta/LA-QUINTA_FONDO.gif');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
